2000-08-04  Kevin Buettner  <kevinb@redhat.com>

	* dwarf2read.c (struct comp_unit_head): Add fields offset_size
	and initial_length_size.  Change type of ``length'' field to long.
	(read_initial_length, read_offset): New functions.
	(dwarf2_build_psymtabs_easy): Call read_initial_length() instead
	of just reading 4 bytes.
	(read_comp_unit_head): Likewise; also, call read_offset() to
	fetch the offset instead of just reading 4 bytes.
	(dwarf_decode_lines): Likewise.
	(read_comp_unit_head): Fix internal error message so it
	accurately reflects the function in which the error occurred.
	(dwarf2_build_psymtabs_hard): Properly account for size of the
	initial length field in the section.
	(read_attribute, dwarf2_get_ref_die_offset): Add a case for
	DW_ORM_ref8.
	(dwarf2_build_psymtabs_hard, psymtabs_to_symtab_1): Don't
	assume that the .text section will have index 0 in the
	section_offsets table.

Fri Aug  4 18:00:41 2000  Andrew Cagney  <cagney@b1.cygnus.com>

	* remote.c (enum Z_packet_type): Define.
	(remote_protocol_Z): Change to an array of size NR_Z_PACKET_TYPES.
	(remote_insert_watchpoint): Check watchpoint type.
	(watchpoint_to_Z_packet): New function.
	(enum packet_result): Define.
	(packet_ok): New function. Return enum packet_result.
	(init_all_packet_configs): New function.
	(remote_open_1, remote_async_open_1, remote_cisco_open): Use
 	init_all_packet_configs instead of initializing remote_protocol_P,
 	remote_protocol_Z, remote_protocol_binary_download separatly.
	(remote_remove_hw_breakpoint, remote_insert_hw_breakpoint,
 	remote_remove_watchpoint, remote_insert_watchpoint): Use
 	watchpoint_to_Z_packet and packet_ok.  Remove #ifdef
 	TARGET_HAS_HARDWARE_WATCHPOINTS.
	(set_remote_protocol_Z_software_bp_packet_cmd,
 	show_remote_protocol_Z_software_bp_packet_cmd,
 	set_remote_protocol_Z_hardware_bp_packet_cmd,
 	show_remote_protocol_Z_hardware_bp_packet_cmd,
 	set_remote_protocol_Z_write_wp_packet_cmd,
 	show_remote_protocol_Z_write_wp_packet_cmd,